fix: too much space above content in mobile view

--- a/src/Components/Admin/Folios/Folios.css
+++ b/src/Components/Admin/Folios/Folios.css
@@ -119,7 +119,7 @@
   }
 
   #folios-container {
-    margin-top: -90vh;
+    margin-top: -100vh;
     padding: 2rem 1rem;
   }
 }
