--- a/src/Components/Admin/Grievances/Grievances.css
+++ b/src/Components/Admin/Grievances/Grievances.css
@@ -53,7 +53,7 @@
     flex-direction: column;
   }
   #grievances-admin-container {
-    margin-top: -90vh;
+    margin-top: -100vh;
     padding: 2rem 1rem;
   }
   /* .gr-ad-inv-table-grievances { */
