--- a/src/Components/Admin/Investors/Investors.css
+++ b/src/Components/Admin/Investors/Investors.css
@@ -115,7 +115,7 @@
   }
 
   .investors-container {
-    margin-top: -90vh;
+    margin-top: -100vh;
     padding: 2rem 1rem;
   }
 }
